fixes bugs in text alignment

--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ h2 {
     padding-left: 80px;
 }
 
-/* what does this do- space is missing btwn h2 and #main, ?? */
-h2#main {
+main h2 {
     font-size: 25px;
     padding-left: 0px;
     margin-bottom: 5px;
@@ -74,6 +73,12 @@ h3 {
     margin-bottom: 15px;
     margin-top: 15px;
     text-align: center;
+}
+
+#spiritsDiv h3 {
+    font-family: 'Bad Script', cursive;
+    font-size: 25px;
+    text-align: left;
 }
 
 h4 {
